Fix: display tags too long, e.g. tags a with href

--- a/public/css/sass/components/segment/tagsMenu.scss
+++ b/public/css/sass/components/segment/tagsMenu.scss
@@ -102,6 +102,7 @@
     vertical-align: middle;
     margin: 1px;
     cursor: pointer;
+    word-break: break-all;
     &::selection {
         background: transparent !important;
     }
